--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,86 +1,95 @@
 audit_header: false
-title: -- CLIENT BRAND --
+title: '-- CLIENT BRAND --'
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: true
 custom_links:
   - title: Join The Team
-    url: http://www.viewcentralpahomes.com/info/jointhedavehooketeam
-
+    url: 'http://www.viewcentralpahouses.com/join-the-team'
 client:
   name: Dave Hooke
   license_number:
-  about_markdown: |
-    Born and raised in Carlisle, Dave is honored to serve the Real Estate needs of the greater Carlisle Community. As a partner of Hooke, Hooke & Eckman Realtors, he has a personal interest in the continuation of the reputable family name. Also, he is the lead agent of The Dave Hooke Team and has consistently been in the top 1% as a top producing real estate agent in the Carlisle Area Community for 6 consecutive years.
+  about_markdown: >
+    Born and raised in Carlisle, Dave is honored to serve the Real Estate needs
+    of the greater Carlisle Community. As a partner of Hooke, Hooke & Eckman
+    Realtors, he has a personal interest in the continuation of the reputable
+    family name. Also, he is the lead agent of The Dave Hooke Team and has
+    consistently been in the top 1% as a top producing real estate agent in the
+    Carlisle Area Community for 6 consecutive years.
 
-    Dave is a member of Carlisle Brethren In Christ Church, enjoys outdoor activities, reading, playing soccer, and things related to ‘Community’. A fun fact about Dave is that when he talks on the phone, he can’t sit down and he is always pacing around the office! : ) Dave enjoys living here in Carlisle with his wife and family.
+
+
+    Dave is a member of Carlisle Brethren In Christ Church, enjoys outdoor
+    activities, reading, playing soccer, and things related to ‘Community’. A fun
+    fact about Dave is that when he talks on the phone, he can’t sit down and he
+    is always pacing around the office! : ) Dave enjoys living here in Carlisle
+    with his wife and family.
   market:
   brand: The Dave Hooke Team LLC
-  brokerage: Hooke Hooke & Eckman Realtors
-  address: 977 Walnut Bottom Road<br>Carlisle, PA 17015
+  brokerage: 'Hooke Hooke & Eckman Realtors'
+  address: '977 Walnut Bottom Road<br>Carlisle, PA 17015'
   phone: 717-216-0860
   phone_type: Direct
   phone2: 717-249-1844
   phone2_type: Brokerage
   email: Dave@hhande.com
-  url: http://ViewCentralPAHomes.com
-
+  url: 'http://ViewCentralPAHomes.com'
 CTAs:
   first_CTA_text: Request a Free Strategy Session
-  first_CTA_URL: http://www.viewcentralpahouses.com/join-the-team
+  first_CTA_URL: 'http://www.viewcentralpahouses.com/join-the-team'
   second_CTA_text:
   second_CTA_URL:
-  VR_form: http://oi.vresp.com?fid=1593df562e
-
+  VR_form: 'http://oi.vresp.com?fid=1593df562e'
 sidebar_CTA:
-  - CTA_image_path: https://lh5.googleusercontent.com/proxy/V9aLZKkQrMp5XTS9sOr7LymNyck_AVJ_gvu_tGfKBwwkf1pwq6YGvfaWCfpFqZ2gU3s=s0-d
+  - CTA_image_path: 'https://lh5.googleusercontent.com/proxy/V9aLZKkQrMp5XTS9sOr7LymNyck_AVJ_gvu_tGfKBwwkf1pwq6YGvfaWCfpFqZ2gU3s=s0-d'
     CTA_title: Looking to Build Your Real Estate Career?
-    CTA_text: Let's talk about how The Dave Hooke Team can take your business to new heights.
+    CTA_text: "Let's talk about how The Dave Hooke Team can take your business to new heights."
     CTA_link_text: Request a Free Strategy Session
-    CTA_url: http://www.viewcentralpahouses.com/join-the-team
-
+    CTA_url: 'http://www.viewcentralpahouses.com/join-the-team'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: How to Sell More Homes
-  welcome_text_markdown: |
-    Whether you are just starting out, or you are licensed Broker, our team of professionals can answer any questions you might have about real estate.<BR>
+  welcome_text_markdown: >
+    Whether you are just starting out, or you are licensed Broker, our team of
+    professionals can answer any questions you might have about real estate.<BR>
 
-    Subscribe to this blog to get the latest news on local market trends and receive expert tips for buying or selling a home.
+
+
+    Subscribe to this blog to get the latest news on local market trends and
+    receive expert tips for buying or selling a home.
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/DaveHookeRealtor/
-  linkedin_url: https://www.linkedin.com/in/davehooke
-  gplus_url: https://plus.google.com/b/100354719032170044883/100354719032170044883?pageId=100354719032170044883
-  youtube_url: https://www.youtube.com/channel/UCMYs4mvNX9Exmy3OnG9Tt7Q
-  twitter_url: https://twitter.com/davehooke
+  facebook_url: 'https://www.facebook.com/DaveHookeRealtor/'
+  linkedin_url: 'https://www.linkedin.com/in/davehooke'
+  gplus_url: 'https://plus.google.com/b/100354719032170044883/100354719032170044883?pageId=100354719032170044883'
+  youtube_url: 'https://www.youtube.com/channel/UCMYs4mvNX9Exmy3OnG9Tt7Q'
+  twitter_url: 'https://twitter.com/davehooke'
   instagram_url:
   pinterest_url:
-  zillow_url: http://www.zillow.com/profile/The-Dave-Hooke-Team/
-  trulia_url: http://www.trulia.com/profile/the-dave-hooke-team-agent-carlisle-pa-zgpq697x/overview
+  zillow_url: 'http://www.zillow.com/profile/The-Dave-Hooke-Team/'
+  trulia_url: 'http://www.trulia.com/profile/the-dave-hooke-team-agent-carlisle-pa-zgpq697x/overview'
   yelp_url:
-  podcast_url: https://itunes.apple.com/us/podcast/central-pa-real-estate-career-podcast-with-dave-hooke/id1256717687?mt=2
-
+  podcast_url: 'https://itunes.apple.com/us/podcast/central-pa-real-estate-career-podcast-with-dave-hooke/id1256717687?mt=2'
 podcast:
   title: Central PA Real Estate Career Podcast with Dave Hooke
-  categories: Education
-  image: http://i.imgur.com/EQG8hR1.jpg
+  categories:
+    - Education
+  image: 'http://i.imgur.com/EQG8hR1.jpg'
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
-
 images:
-  client_headshot_path: http://i.imgur.com/ri3QnT0.png
+  client_headshot_path: 'http://i.imgur.com/ri3QnT0.png'
   hero_logo_path: /img/logo.png
   hero_logo_path-2: /img/logo-2.png
   logo_width_number: 40
@@ -94,13 +103,11 @@ site_colors:
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: "rgba(0,0,0,.7)"
-
+  shadow_color: 'rgba(0, 0, 0, 0.7)'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
