--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -101,7 +101,7 @@ images:
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#005138'
+  brand_color: '#5d9169'
   theme_color: '#00422d'
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
